# common-utils

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  TODO
apps/: CMakeLists.txt
apps/benchmark-demo/: CMakeLists.txt  main.cpp  some_class.cpp  some_class.h
apps/cli-demo/: CMakeLists.txt  main.cpp
apps/cpu-descriptor/: CMakeLists.txt  main.cpp
apps/enum-demo/: CMakeLists.txt  main.cpp
apps/ini-demo/: CMakeLists.txt  config.ini  main.cpp
apps/ini-demo/sublibrary-demo/: CMakeLists.txt  sublibrary-demo.cpp  sublibrary-demo.h
cmake/: SimdAutogenerator.cmake  StringUtils.cmake
cmake/Templates/: simd-compile-unit-class.template  simd-compile-unit.template  simd-interface-class.template  simd-interface.template
include/: cli-utils.hpp  cpu-utils.h  cpu-utils.hpp  ini-utils.hpp  os-utils.hpp  parsing-utils.hpp  profile-utils.hpp  validation-utils.hpp
include/code-generators/: cli-parsers.h  instructions-sets.h
include/cu/: cli-utils.hpp  cpu-utils.hpp  enum-utils.hpp  file-utils.hpp  id-utils.hpp  ini-utils.hpp  macro-utils.hpp  math-utils.hpp  os-utils.hpp  parsing-utils.hpp  profile-utils.hpp  simd-utils.hpp  string-utils.hpp  template-utils.hpp  test-utils.hpp  validation-utils.hpp
include/cu/code-generators/: cli-parsers.h  enum-generator.h  instructions-sets.h  macro-helpers.h
src/: cpu-utils.cpp  profile-utils.cpp
tests/: CMakeLists.txt
tests/cli-test/: CMakeLists.txt  main.cpp
tests/id-test/: CMakeLists.txt  main.cpp
tests/math-test/: CMakeLists.txt  main.cpp
